<resources>
    <string name="app_name">Mpepu App</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_child_details">Child Details</string>
    <string name="registration_number">Registration Number</string>
    <string name="first_name">First Name</string>
    <string name="lastname">LastName</string>
    <string name="father_s_name">Father\'s name</string>
    <string name="mother_s_name">Mother\'s name</string>
    <string name="birth_height_cm">Birth Height (cm)</string>
    <string name="birth_weight_kg">Birth Weight (kg)</string>
    <string name="current_height_cm">Current Height (cm)</string>
    <string name="current_weight_kg">Current Weight (kg)</string>
    <string name="todo">TODO</string>
    <string name="error_invalid_id">Invalid Registration Number</string>
    <string name="title_activity_log">Child Log</string>
    <string name="title_activity_all_graphs">AllGraphsActivity</string>
    <string name="title_weight_for_age">Weight for Age</string>
    <string name="title_weight_for_height">Weight for Height</string>
    <string name="title_height_for_age">Height for Age</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age_months">Age (Months)</string>
    <string name="button_save">Save</string>
    <string name="hint_word">Word..</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
</resources>
