<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activities.ChildRegistrationActivity"
        tools:showIn="@layout/activity_child_details">

    <ImageView
            android:id="@+id/imageView"
            android:layout_width="160dp"
            android:layout_height="156dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_white" />


    <android.support.design.widget.TextInputLayout
            android:id="@+id/regID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:layout_marginBottom="13dp"
            android:hint="@string/registration_number"
            app:layout_constraintBottom_toTopOf="@+id/fName"
            app:layout_constraintEnd_toEndOf="@+id/fName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/fName"
            app:layout_constraintTop_toTopOf="parent">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtRegID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registration_number"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/fName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/lName"
            app:layout_constraintEnd_toEndOf="@+id/lName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/lName"
            app:layout_constraintTop_toBottomOf="@+id/regID">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtFName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/lName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/cAge"
            app:layout_constraintEnd_toEndOf="@+id/cAge"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cAge"
            app:layout_constraintTop_toBottomOf="@+id/fName">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lastname"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/cAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            app:layout_constraintBottom_toTopOf="@+id/mName"
            app:layout_constraintEnd_toEndOf="@+id/mName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/mName"
            app:layout_constraintTop_toBottomOf="@+id/lName">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/age_months"
                android:inputType="numberDecimal"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/mName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/faName"
            app:layout_constraintEnd_toEndOf="@+id/faName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/faName"
            app:layout_constraintTop_toBottomOf="@+id/cAge">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtMName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mother_s_name"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/faName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/bWeight"
            app:layout_constraintEnd_toEndOf="@+id/bWeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/bWeight"
            app:layout_constraintTop_toBottomOf="@+id/mName">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtfaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/father_s_name"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/bWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/bHeight"
            app:layout_constraintEnd_toEndOf="@+id/bHeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/bHeight"
            app:layout_constraintTop_toBottomOf="@+id/faName">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtBWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_weight_kg"
                android:inputType="numberDecimal"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/bHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/cWeight"
            app:layout_constraintEnd_toEndOf="@+id/cWeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cWeight"
            app:layout_constraintTop_toBottomOf="@+id/bWeight">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtbHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/birth_height_cm"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/cHeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="245dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cWeight">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_height_cm"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/cWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/cHeight"
            app:layout_constraintEnd_toEndOf="@+id/cHeight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cHeight"
            app:layout_constraintTop_toBottomOf="@+id/bHeight">
        <android.support.design.widget.TextInputEditText
                android:id="@+id/edtCWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_weight_kg"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />


    </android.support.design.widget.TextInputLayout>

    <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />


</android.support.constraint.ConstraintLayout>


<!--



























-->