<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:gravity="center_horizontal"
                                             android:background="@color/background_blue"
                                             tools:context=".activities.LoginActivity" android:id="@+id/linearLayout3">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" android:layout_marginStart="16dp"/>

    <ImageView
            android:id="@+id/imageView2"
            android:layout_width="1264dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/logo_color"
            android:layout_marginTop="32dp" android:layout_marginBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@+id/email_sign_in_button"/>


    <AutoCompleteTextView
            android:id="@+id/email"
            android:layout_width="1264dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="11dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.776"
            app:layout_constraintStart_toEndOf="@+id/password"/>


    <EditText
            android:id="@+id/password"
            android:layout_width="1264dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeActionId="6"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/email_sign_in_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.776"
            app:layout_constraintStart_toEndOf="@+id/email"/>


    <Button
            android:id="@+id/email_sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="174dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/password"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2" app:layout_constraintGuide_begin="20dp"
                                          android:orientation="horizontal"/>


</android.support.constraint.ConstraintLayout>